--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="content">
-    <img class="equilibrium" src="images/image-equilibrium.jpg" alt="image">
+    <img class="equilibrium" src="image-equilibrium.jpg" alt="image">
     <h2>Equilibrium #3429</h2>
     <p class="main">Our Equilibrium collection promotes balance and calm.</p>
     <svg class="ok "width="11" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z" fill="#00FFF8"/></svg>
@@ -27,7 +27,7 @@
       </div>
     <hr>
     <div class="avatar-div">
-      <img class="avatar" src="images/image-avatar.png" alt="avatar-image">
+      <img class="avatar" src="image-avatar.png" alt="avatar-image">
       <span class="last">Creation of <span>Jules Wyvern</span></span>
     </div>
 
